# pollination-drive-base

./: README.md
bramblebee_base/: CMakeLists.txt  package.xml
bramblebee_base/launch/: base.launch
bramblebee_control/: CMakeLists.txt  package.xml
bramblebee_control/config/: control.yaml  gazebo_interface.yaml  public_interface.yaml
bramblebee_control/launch/: control.launch  teleop.launch
bramblebee_description/: CMakeLists.txt  package.xml
bramblebee_description/env-hooks/: 50.bramblebee_description.sh
bramblebee_description/launch/: description.launch
bramblebee_description/urdf/: bramblebee.urdf.xacro  bramblebee_description.urdf.xacro  velodyne_hdl32e.urdf.xacro
bramblebee_gazebo/: CMakeLists.txt  package.xml
bramblebee_gazebo/env-hooks/: 50.bramblebee_gazebo.sh
bramblebee_gazebo/launch/: empty_world.launch  greenhouse.launch  playpen.launch  spawn.launch
bramblebee_gazebo/src/: GazeboRosVelodyneLaser.cpp
bramblebee_gazebo/urdf/: bramblebee_description.gazebo.xacro
bramblebee_gazebo/worlds/: clearpath_playpen.world
bramblebee_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
bramblebee_navigation/config/: costmap_common.yaml  costmap_global_laser.yaml  costmap_global_static.yaml  costmap_local.yaml  planner.yaml  rosconsole.config
bramblebee_navigation/launch/: amcl_demo.launch  exploration.launch  exploration_demo.launch  gmapping_demo.launch  move_base.launch  move_base_mapless_demo.launch
bramblebee_viz/: CMakeLists.txt  package.xml
bramblebee_viz/launch/: view_bramblebee_model.launch  view_bramblebee_robot.launch
bramblebee_viz/rviz/: bramblebee_model.rviz  bramblebee_robot.rviz
hw_interface/include/hw_interface/: base_serial_interface.hpp
hw_interface_plugins/hw_interface_plugin_novatel_span/: CMakeLists.txt  package.xml
hw_interface_plugins/hw_interface_plugin_novatel_span/include/hw_interface_plugin_novatel_span/: hw_interface_plugin_novatel_span_serial.hpp
hw_interface_plugins/hw_interface_plugin_novatel_span/launch/launch_params/: Novatel_Span_Serial_launch_params.yaml
hw_interface_plugins/hw_interface_plugin_novatel_span/src/: hw_interface_plugin_novatel_span_serial.cpp
