<?xml version="1.0"?>
<package>
  <name>bramblebee_description</name>
  <version>0.0.0</version>
  <description>Bramblebee URDF Description</description>

  <license>BSD</license>

  <author email="jqnguyen@mix.wvu.edu">Jenn Nguyen</author>

  <maintainer email="pbovbel@clearpathrobotics.com">Paul Bovbel</maintainer>
  <maintainer email="jqnguyen@mix.wvu.edu">Jenn Nguyen</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>husky_description</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
