<?xml version="1.0"?>
<package>
  <name>bramblebee_gazebo</name>
  <version>0.0.0</version>
  <description>Bramblebee URDF Gazebo</description>

  <license>BSD</license>

  <author email="jqnguyen@mix.wvu.edu">Jenn Nguyen</author>

  <maintainer email="pbovbel@clearpathrobotics.com">Paul Bovbel</maintainer>
  <maintainer email="jqnguyen@mix.wvu.edu">Jenn Nguyen</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>husky_gazebo</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>husky_control</run_depend>
  <run_depend>bramblebee_description</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>
